--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,5 +13,5 @@ sentencepiece==0.1.97
 six==1.16.0
 sseclient==0.0.27
 torch==2.0.0
-transformers==4.27.1
-tritonclient~=2.32.0
+transformers==4.28.1
+tritonclient[all]==2.32.0
