--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ six="^1.16.0"
 sseclient="^0.0.27"
 torch="^2.0.0"
 transformers="^4.27.1"
+tritonclient = { version = "2.32.0", extras = ["all"] }  # 添加 tritonclient 依赖项
 
 [tool.poetry.scripts]
 openplayground = "server.app:cli"
